force-app/main/default/objects/Variedad__c/Variedad__c.object-meta.xml
<CustomObject>
    <label>Variety</label>
    <nameField>
        <label>Variety Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Varieties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>