force-app/main/default/objects/Variedad__c/fields/Bullet_1__c.field-meta.xml
<CustomField>
    <fullName>Bullet_1__c</fullName>
    <label>Bullet_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>