force-app/main/default/objects/Variedad__c/fields/Bullet_2__c.field-meta.xml
<CustomField>
    <fullName>Bullet_2__c</fullName>
    <label>Bullet_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>