force-app/main/default/objects/Variedad__c/fields/Bullet_3__c.field-meta.xml
<CustomField>
    <fullName>Bullet_3__c</fullName>
    <label>Bullet_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>