force-app/main/default/objects/Variedad__c/fields/Canopy__c.field-meta.xml
<CustomField>
    <fullName>Canopy__c</fullName>
    <label>Canopy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>