force-app/main/default/objects/Variedad__c/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalog</label>
    <type>Checkbox</type>
</CustomField>