force-app/main/default/objects/Variedad__c/fields/Cercospora__c.field-meta.xml
<CustomField>
    <fullName>Cercospora__c</fullName>
    <label>Cercospora</label>
    <length>40</length>
    <type>Text</type>
</CustomField>