force-app/main/default/objects/Variedad__c/fields/Check_Variety__c.field-meta.xml
<CustomField>
    <fullName>Check_Variety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Variety</label>
    <type>Checkbox</type>
</CustomField>