force-app/main/default/objects/Variedad__c/fields/Commercial_Brand__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Brand</label>
    <referenceTo>Licensee_Brand__c</referenceTo>
    <relationshipLabel>Varieties</relationshipLabel>
    <relationshipName>Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>