force-app/main/default/objects/Variedad__c/fields/Commercial_Code__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Code__c</fullName>
    <label>GDM Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>