force-app/main/default/objects/Variedad__c/fields/DM_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Name__c</fullName>
    <label>DM Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>