force-app/main/default/objects/Variedad__c/fields/Exclusive_Licensee__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exclusive Licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exclusive Varieties</relationshipLabel>
    <relationshipName>Exclusive_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>