force-app/main/default/objects/Variedad__c/fields/Exclusive_Variety__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Variety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>