force-app/main/default/objects/Variedad__c/fields/Flower_Color__c.field-meta.xml
<CustomField>
    <fullName>Flower_Color__c</fullName>
    <label>Flower Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>