force-app/main/default/objects/Variedad__c/fields/Frogeye__c.field-meta.xml
<CustomField>
    <fullName>Frogeye__c</fullName>
    <label>Frogeye</label>
    <length>40</length>
    <type>Text</type>
</CustomField>