force-app/main/default/objects/Variedad__c/fields/Generic_Name__c.field-meta.xml
<CustomField>
    <fullName>Generic_Name__c</fullName>
    <label>Generic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>