force-app/main/default/objects/Variedad__c/fields/Genetic_Provider__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Provider__c</fullName>
    <label>Genetic Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Name</valueSetName>
    </valueSet>
</CustomField>