force-app/main/default/objects/Variedad__c/fields/GID__c.field-meta.xml
<CustomField>
    <fullName>GID__c</fullName>
    <label>GID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>