force-app/main/default/objects/Variedad__c/fields/Growth_habit__c.field-meta.xml
<CustomField>
    <fullName>Growth_habit__c</fullName>
    <label>Growth Habit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>