force-app/main/default/objects/Variedad__c/fields/H40_Name__c.field-meta.xml
<CustomField>
    <fullName>H40_Name__c</fullName>
    <label>H40 Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>