force-app/main/default/objects/Variedad__c/fields/Hide_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Hide_Characteristic__c</fullName>
    <description>Choose which characteristics will be hidden from the Product Data Page in GDM Access</description>
    <label>Hide Characteristic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flower Color</fullName>
            </value>
            <value>
                <fullName>Pubescence Color</fullName>
            </value>
            <value>
                <fullName>Pod Color</fullName>
            </value>
            <value>
                <fullName>Hilum Color</fullName>
            </value>
            <value>
                <fullName>Relative Maturity</fullName>
            </value>
            <value>
                <fullName>Growth Habit</fullName>
            </value>
            <value>
                <fullName>Plant Height</fullName>
            </value>
            <value>
                <fullName>Plant Type</fullName>
            </value>
            <value>
                <fullName>Canopy</fullName>
            </value>
            <value>
                <fullName>Standability</fullName>
            </value>
            <value>
                <fullName>Salt Tolerance</fullName>
            </value>
            <value>
                <fullName>Seed Size</fullName>
            </value>
            <value>
                <fullName>Emergence</fullName>
            </value>
            <value>
                <fullName>Green Stem</fullName>
            </value>
            <value>
                <fullName>Shattering</fullName>
            </value>
            <value>
                <fullName>SCN</fullName>
            </value>
            <value>
                <fullName>SCN Race 14</fullName>
            </value>
            <value>
                <fullName>Sudden Death Syndrome</fullName>
            </value>
            <value>
                <fullName>Stem Canker</fullName>
            </value>
            <value>
                <fullName>RPS Gene</fullName>
            </value>
            <value>
                <fullName>Root Knot Nematode</fullName>
            </value>
            <value>
                <fullName>Frogeye</fullName>
            </value>
            <value>
                <fullName>PRR Tolerance</fullName>
            </value>
            <value>
                <fullName>Iron Deficiency Chlorosis</fullName>
            </value>
            <value>
                <fullName>Cercospora</fullName>
            </value>
            <value>
                <fullName>Metribuzin Tolerance</fullName>
            </value>
            <value>
                <fullName>White Mold</fullName>
            </value>
            <value>
                <fullName>Brown Stem Rot</fullName>
            </value>
            <value>
                <fullName>STS</fullName>
            </value>
            <value>
                <fullName>Protein Concentration %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>