force-app/main/default/objects/Variedad__c/fields/Highlight_1__c.field-meta.xml
<CustomField>
    <fullName>Highlight_1__c</fullName>
    <label>Highlight_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>