force-app/main/default/objects/Variedad__c/fields/Highlight_2__c.field-meta.xml
<CustomField>
    <fullName>Highlight_2__c</fullName>
    <label>Highlight_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>