force-app/main/default/objects/Variedad__c/fields/Highlight_3__c.field-meta.xml
<CustomField>
    <fullName>Highlight_3__c</fullName>
    <label>Highlight_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>