force-app/main/default/objects/Variedad__c/fields/Id_Largo__c.field-meta.xml
<CustomField>
    <fullName>Id_Largo__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Id Largo</label>
    <type>Text</type>
</CustomField>