force-app/main/default/objects/Variedad__c/fields/Iron_Deficiency_Chlorosis__c.field-meta.xml
<CustomField>
    <fullName>Iron_Deficiency_Chlorosis__c</fullName>
    <label>Iron Deficiency Chlorosis</label>
    <length>40</length>
    <type>Text</type>
</CustomField>