force-app/main/default/objects/Variedad__c/fields/Launch_Year__c.field-meta.xml
<CustomField>
    <fullName>Launch_Year__c</fullName>
    <label>Launch Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>