force-app/main/default/objects/Variedad__c/fields/Licenciada__c.field-meta.xml
<CustomField>
    <fullName>Licenciada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensed</label>
    <type>Checkbox</type>
</CustomField>