force-app/main/default/objects/Variedad__c/fields/Map_image__c.field-meta.xml
<CustomField>
    <fullName>Map_image__c</fullName>
    <label>Map Image</label>
    <type>Url</type>
</CustomField>