force-app/main/default/objects/Variedad__c/fields/Marca_comercial__c.field-meta.xml
<CustomField>
    <fullName>Marca_comercial__c</fullName>
    <label>Marca NO USAR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GDM</fullName>
            </value>
            <value>
                <fullName>VIRTUE</fullName>
            </value>
            <value>
                <fullName>DONMARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>