force-app/main/default/objects/Variedad__c/fields/Maturity_Group__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Group__c</fullName>
    <label>Maturity Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>