force-app/main/default/objects/Variedad__c/fields/Metribuzin_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Metribuzin_Tolerance__c</fullName>
    <label>Metribuzin Tolerance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>