force-app/main/default/objects/Variedad__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <formula>IF(TEXT(Launch_Year__c)=&apos;23/2023&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>