force-app/main/default/objects/Variedad__c/fields/Nombre_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Registro__c</fullName>
    <label>GID Access Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>