force-app/main/default/objects/Variedad__c/fields/Patent_status__c.field-meta.xml
<CustomField>
    <fullName>Patent_status__c</fullName>
    <label>Patent Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>