force-app/main/default/objects/Variedad__c/fields/Plant_Height__c.field-meta.xml
<CustomField>
    <fullName>Plant_Height__c</fullName>
    <label>Plant Height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>