force-app/main/default/objects/Variedad__c/fields/Plant_Type__c.field-meta.xml
<CustomField>
    <fullName>Plant_Type__c</fullName>
    <label>Plant Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>