force-app/main/default/objects/Variedad__c/fields/Pod_Color__c.field-meta.xml
<CustomField>
    <fullName>Pod_Color__c</fullName>
    <label>Pod Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>