force-app/main/default/objects/Variedad__c/fields/Product_Placement_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Placement_Name__c</fullName>
    <inlineHelpText>This is the name that Product Placement Accounts will see in GDM Explore</inlineHelpText>
    <label>Product Placement Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>