force-app/main/default/objects/Variedad__c/fields/Pubescence_Color__c.field-meta.xml
<CustomField>
    <fullName>Pubescence_Color__c</fullName>
    <label>Pubescence Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>