force-app/main/default/objects/Variedad__c/fields/Relative_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Relative_Maturity__c</fullName>
    <label>Relative Maturity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>