force-app/main/default/objects/Variedad__c/fields/RPS_Gene__c.field-meta.xml
<CustomField>
    <fullName>RPS_Gene__c</fullName>
    <label>RPS Gene</label>
    <length>40</length>
    <type>Text</type>
</CustomField>