force-app/main/default/objects/Variedad__c/fields/Salt_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Salt_Tolerance__c</fullName>
    <label>Salt Tolerance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>