force-app/main/default/objects/Variedad__c/fields/SCN_14__c.field-meta.xml
<CustomField>
    <fullName>SCN_14__c</fullName>
    <label>SCN Race 14</label>
    <length>40</length>
    <type>Text</type>
</CustomField>