force-app/main/default/objects/Variedad__c/fields/SCN__c.field-meta.xml
<CustomField>
    <fullName>SCN__c</fullName>
    <label>SCN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>