force-app/main/default/objects/Variedad__c/fields/SCN_Race_14__c.field-meta.xml
<CustomField>
    <fullName>SCN_Race_14__c</fullName>
    <label>Cercospora OLD</label>
    <length>40</length>
    <type>Text</type>
</CustomField>