force-app/main/default/objects/Variedad__c/fields/SCN_Source__c.field-meta.xml
<CustomField>
    <fullName>SCN_Source__c</fullName>
    <label>SCN Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>