force-app/main/default/objects/Variedad__c/fields/Seed_Size__c.field-meta.xml
<CustomField>
    <fullName>Seed_Size__c</fullName>
    <label>Seed Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>