force-app/main/default/objects/Variedad__c/fields/Shattering__c.field-meta.xml
<CustomField>
    <fullName>Shattering__c</fullName>
    <label>Shattering</label>
    <length>40</length>
    <type>Text</type>
</CustomField>