force-app/main/default/objects/Variedad__c/fields/Standability__c.field-meta.xml
<CustomField>
    <fullName>Standability__c</fullName>
    <label>Standability</label>
    <length>20</length>
    <type>Text</type>
</CustomField>