force-app/main/default/objects/Variedad__c/fields/Stern_Canker__c.field-meta.xml
<CustomField>
    <fullName>Stern_Canker__c</fullName>
    <label>Stem Canker</label>
    <length>20</length>
    <type>Text</type>
</CustomField>