force-app/main/default/objects/Variedad__c/fields/Tap_Root_Decline__c.field-meta.xml
<CustomField>
    <fullName>Tap_Root_Decline__c</fullName>
    <label>Tap Root Decline</label>
    <length>40</length>
    <type>Text</type>
</CustomField>