force-app/main/default/objects/Variedad__c/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CONVENTIONAL</fullName>
            </value>
            <value>
                <fullName>ENLIST</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>IPRO</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>XTEND</fullName>
            </value>
            <value>
                <fullName>XTENDFLEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>