force-app/main/default/objects/Variedad__c/fields/Variety_Id__c.field-meta.xml
<CustomField>
    <fullName>Variety_Id__c</fullName>
    <label>Variety Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>