force-app/main/default/objects/Variedad__c/fields/Variety_Number__c.field-meta.xml
<CustomField>
    <fullName>Variety_Number__c</fullName>
    <label>Variety Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>