force-app/main/default/objects/Variedad__c/fields/Variety_Type__c.field-meta.xml
<CustomField>
    <fullName>Variety_Type__c</fullName>
    <label>Variety Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Experimental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>