force-app/main/default/objects/Variedad__c/fields/VIRTUE_Name__c.field-meta.xml
<CustomField>
    <fullName>VIRTUE_Name__c</fullName>
    <label>VIRTUE Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>