force-app/main/default/objects/Variedad__c/listViews/All_GDM_Active_Catalog.listView-meta.xml
<ListView>
    <fullName>All_GDM_Active_Catalog</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>Catalog__c</columns>
    <columns>Relative_Maturity__c</columns>
    <columns>New__c</columns>
    <columns>Maturity_Group__c</columns>
    <columns>Active__c</columns>
    <columns>Regions__c</columns>
    <columns>Brown_Stem_Rot__c</columns>
    <columns>Metribuzin_Tolerance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>GDM</value>
    </filters>
    <filters>
        <field>Catalog__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>GDM 2020 Catalog</label>
</ListView>