force-app/main/default/objects/Variedad__c/listViews/DONMARIO.listView-meta.xml
<ListView>
    <fullName>DONMARIO</fullName>
    <columns>NAME</columns>
    <columns>Nombre_de_Registro__c</columns>
    <columns>Brand__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>Catalog__c</columns>
    <columns>Commercial_Code__c</columns>
    <columns>Maturity_Group__c</columns>
    <columns>Maturity__c</columns>
    <columns>Relative_Maturity__c</columns>
    <columns>Royalty_Rate__c</columns>
    <columns>Regions__c</columns>
    <columns>Active__c</columns>
    <columns>Launch_Year__c</columns>
    <columns>Map_image__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>DONMARIO</value>
    </filters>
    <filters>
        <field>Catalog__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DONMARIO 2020 Catalog</label>
</ListView>