force-app/main/default/objects/Variedad__c/listViews/Virtue.listView-meta.xml
<ListView>
    <fullName>Virtue</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Nombre_de_Registro__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>Catalog__c</columns>
    <columns>Comments__c</columns>
    <columns>Commercial_Code__c</columns>
    <columns>Relative_Maturity__c</columns>
    <columns>Royalty_Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>New__c</columns>
    <columns>Active__c</columns>
    <columns>Launch_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>VIRTUE</value>
    </filters>
    <label>VIRTUE 2020 Catalog</label>
</ListView>